src/objects/OrderApi__Subscription_Line__c.object
<CustomObject>
    <description>Subscription Lines allow more than one Item to be assigned to a Subscription.</description>
    <fields>
        <fullName>OrderApi__Activated_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the Subscription Line was activated.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the Subscription Line was activated.</inlineHelpText>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Active_Assignments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** System Calculated ** Number of Active Assignments. Valid and restricted to Items where &quot;Enable Assignments&quot; is checked. Defaults 0 if no Assignments found.</description>
        <inlineHelpText>** System Calculated ** Number of Active Assignments. Valid and restricted to Items where &quot;Enable Assignments&quot; is checked. Defaults 0 if no Assignments found.</inlineHelpText>
        <label>Active Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignments_Allowed__c</fullName>
        <description>** System Calculated ** If the Item &quot;Enable Assignments&quot; and &quot;Restrict Number of Assignments&quot; fields are checked, the Item &quot;Maximum Number of Assignments&quot; x the Line &quot;Quantity&quot; is set. Otherwise no value is set.</description>
        <formula>IF (  OrderApi__Item__r.OrderApi__Enable_Assignments__c &amp;&amp;  OrderApi__Item__r.OrderApi__Restrict_Number_of_Assignments__c ,   OrderApi__Item__r.OrderApi__Maximum_Number_of_Assignments__c *  OrderApi__Quantity__c  , IF ( NOT(OrderApi__Item__r.OrderApi__Restrict_Number_of_Assignments__c) &amp;&amp; OrderApi__Item__r.OrderApi__Enable_Assignments__c, null , null ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** If the Item &quot;Enable Assignments&quot; and &quot;Restrict Number of Assignments&quot; fields are checked, the Item &quot;Maximum Number of Assignments&quot; x the Line &quot;Quantity&quot; is set. Otherwise no value is set.</inlineHelpText>
        <label>Assignments Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignments_Available__c</fullName>
        <description>** System Calculated ** If the Item &quot;Restricts Number of Assignments&quot; then Assignments Allowed - Active Assignments is set. Otherwise the value is null.</description>
        <formula>IF (
OrderApi__Item__r.OrderApi__Enable_Assignments__c &amp;&amp;  OrderApi__Item__r.OrderApi__Restrict_Number_of_Assignments__c , OrderApi__Assignments_Allowed__c - OrderApi__Active_Assignments__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** If the Item &quot;Restricts Number of Assignments&quot; then Assignments Allowed - Active Assignments is set. Otherwise the value is null.</inlineHelpText>
        <label>Assignments Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Invoice Line record.</description>
        <inlineHelpText>Link to related Invoice Line record.</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
        <relationshipLabel>Subscription Lines</relationshipLabel>
        <relationshipName>Subscription_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoiced_Date__c</fullName>
        <description>** System Calculated ** Automatically populated when Invoice generated for related Subscription Line Item.</description>
        <inlineHelpText>** System Calculated ** Automatically populated when Invoice generated for related Subscription Line Item.</inlineHelpText>
        <label>Invoiced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Amendment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related Subscription Line is considered as a &quot;Subscription Amendment&quot;.</description>
        <inlineHelpText>When checked the line will only amendment subscription lines change active subscription.</inlineHelpText>
        <label>Is Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** Automatically checked when Invoice generated for related Subscription Line Item.</description>
        <inlineHelpText>** System Calculated ** Automatically checked when Invoice generated for related Subscription Line Item.</inlineHelpText>
        <label>Is Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Required_Package_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the subscription line is linked to a package item where &quot;Is Required&quot; is also checked.</description>
        <inlineHelpText>Checked when the subscription line is linked to a package item where &quot;Is Required&quot; is also checked.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated / Override ** Link to the related Item Class.</description>
        <inlineHelpText>** System Calculated / Override ** Link to the related Item Class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Subscription Lines</relationshipLabel>
        <relationshipName>Subscription_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the related &quot;Subscription&quot; Item.</description>
        <inlineHelpText>** Required ** Link to the related &quot;Subscription&quot; Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipName>Subscription_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Line_Description__c</fullName>
        <description>Optional line description will be added to if blank, the value of this field will match the value of the related item&apos;s &quot;Line Description&quot; field.</description>
        <inlineHelpText>Optional line description will be added to if blank, the value of this field will match the value of the related item&apos;s &quot;Line Description&quot; field.</inlineHelpText>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__List_Price__c</fullName>
        <description>** System Calculated ** The value of the related Item&apos;s &quot;Price&quot; (Default)</description>
        <formula>OrderApi__Item__r.OrderApi__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** The value of the related Item&apos;s &quot;Price&quot; (Default)</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the &quot;Price Rule&quot; will no longer drive the &quot;Sale Price&quot; and the system will allow manually entry into the &quot;Sale Price&quot; field.</description>
        <inlineHelpText>When checked the &quot;Price Rule&quot; will no longer drive the &quot;Sale Price&quot; and the system will allow manually entry into the &quot;Sale Price&quot; field.</inlineHelpText>
        <label>Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required System Calculated Override ** Link to the Price Rule that sets the &quot;Sale Price&quot; for the Subscription Line - automatically calculated from the linked Item&apos;s &quot;Price Rules&quot; if &quot;Price Override&quot; is unchecked.</description>
        <inlineHelpText>** Conditionally Required System Calculated Override ** Link to the Price Rule that sets the &quot;Sale Price&quot; for the Subscription Line - automatically calculated from the linked Item&apos;s &quot;Price Rules&quot; if &quot;Price Override&quot; is unchecked.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>OrderApi__Price_Rule__c</referenceTo>
        <relationshipName>Subscription_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Quantity__c</fullName>
        <description>** Required ** The number of Items for the Subscription Line. Defaults to 1.</description>
        <inlineHelpText>** Required ** The number of Items for the Subscription Line. Defaults to 1.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Receipt Line record.</description>
        <inlineHelpText>Link to related Receipt Line record.</inlineHelpText>
        <label>Receipt Line</label>
        <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
        <relationshipLabel>Subscription Lines</relationshipLabel>
        <relationshipName>Subscription_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sale_Price__c</fullName>
        <description>** System Calculated Required Override ** The price per unit for the Subscription Line &quot;Item&quot;.</description>
        <inlineHelpText>** System Calculated Required Override ** The price per unit for the Subscription Line &quot;Item&quot;.</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Sales Order Line.</description>
        <inlineHelpText>Link to related Sales Order Line</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Subscription Lines</relationshipLabel>
        <relationshipName>Subscription_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to parent Subscription Line.</description>
        <inlineHelpText>Link to parent Subscription Line.</inlineHelpText>
        <label>Parent Subscription Line</label>
        <referenceTo>OrderApi__Subscription_Line__c</referenceTo>
        <relationshipLabel>Subscription Lines</relationshipLabel>
        <relationshipName>Subscription_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <description>** Required ** Link to the related Subscription.</description>
        <inlineHelpText>** Required ** Link to the related Subscription.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipName>Subscription_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Subtotal__c</fullName>
        <description>** System Calculated ** Quantity * Sale Price</description>
        <formula>IF(NOT(ISBLANK(OrderApi__Item__c)) &amp;&amp; NOT(ISBLANK(OrderApi__Sale_Price__c)) &amp;&amp; NOT(ISBLANK(OrderApi__Quantity__c)), OrderApi__Sale_Price__c * OrderApi__Quantity__c, OrderApi__Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Quantity * Sale Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the subscription lines to the appropriate term of the Subscription.</description>
        <inlineHelpText>Relates the subscription lines to the appropriate term of the Subscription.</inlineHelpText>
        <label>Term</label>
        <referenceTo>OrderApi__Renewal__c</referenceTo>
        <relationshipLabel>Subscription Lines</relationshipLabel>
        <relationshipName>Subscription_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <description>** System Calculated Required Override ** Defaults to the &quot;Subtotal&quot;.</description>
        <inlineHelpText>** System Calculated Required Override ** Defaults to the &quot;Subtotal&quot;.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Subscription Line</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Subscription Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>